# nullos

./: CMakeLists.txt  README.md  go.sh  go0-gdb.sh  go0.sh  go1.sh  go2.sh  go3.sh  grub.cfg  linker.ld  make-iso.sh  make.sh.sos  make0.sh  make1.sh  make2.sh  make3.sh  myos.bin.dump  run-gdb.sh  run.sh
doc/: nullos.md
src/: .kernel.c.swp  .multiboot.s.swp  0_gdb_01.md  CMakeLists.txt  CMakeLists.txt.bak  kernel.c  multiboot.S
src/0/drivers/: klibc.c  x86_videomem.c
src/0/kernel/: kernel.c
src/1/boot/grub/: multiboot.S  multiboot.h
src/1/drivers/: klibc.c  klibc.h  x86_videomem.c  x86_videomem.h
src/1/include/: errno.h  types.h
src/1/kernel/: .kernel.c.swo  .kernel.c.swp  kernel.c
src/2/boot/grub/: multiboot.S.sos  multiboot2.S  multiboot2.h
src/2/drivers/: klibc.h  x86_videomem.h
src/2/kernel/: kernel2.c
src/3/boot/grub/: multiboot.S  multiboot.h
src/3/include/: stdarg.h
src/3/kernel/: kernel.c
src/boot/: CMakeLists.txt
src/boot/grub/: CMakeLists.txt
src/kernel/: CMakeLists.txt  multiboot.h
src/scheduler/: CMakeLists.txt
